styling to static page

--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
 </main>
 
 <footer>
+    <div id="footer">
+
+    </div>
 
 </footer>
 
@@ -36,6 +39,7 @@
 
 
     <script src="index.js" type="text/babel" ></script>
+   
     
 </body>
 </html>
